--- a/_snippets/t/Makefile
+++ b/_snippets/t/Makefile
@@ -1,7 +1,7 @@
 CC=g++
 CFLAGS=-c -Wall -I/usr/local/include
 LDFLAGS=-lgtest -L/usr/local/lib
-SOURCES=test-all.cpp triple-test.cpp big-dec-test.cpp
+SOURCES=test-all.cpp test-triple.cpp test-big.cpp
 OBJECTS=$(SOURCES:.cpp=.o)
 EXECUTABLE=test-all
 
